# automatic-funicular

./: .env  Clearwatch.md  HOW_TO_TEST_AND_MONITOR.md  NEXT_OBJECTIVE.md  README.md  check_status.py  main.py  monitor_clearwatch.py  next.md  pyproject.toml  quick_status.py  requirements.txt  start_clearwatch.bat  test_clearwatch.py
api/: __init__.py  server.py
config/: config.windows.yaml
detector/: __init__.py  config.py  event_model.py  interface_detector.py  network_detector.py  writer.py
detector/rules/: __init__.py  dns_rules.py  ftp_rules.py  http_rules.py  pop3_imap_rules.py  smb_rules.py  smtp_rules.py  telnet_rules.py  tls_rules.py
scripts/: __init__.py  clearwatch.service  clearwatch_task.xml
worker/: __init__.py  llm_client.py  prompts.py  report_generator.py
